syntax = "proto3";

message WorkspaceError {
    int32 code = 1;
    string msg = 2;
}
